--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="wrapper">
             <div class="content">
-                <img src="/img/poster.jpg" alt="#">
+                <img src="/img/poster.png" alt="#">
                 <h1 class="title">Ты будешь моей валентинкой?</h1>
                 <div class="button__row">
                     <a href="index.html" class="button_yes button">Да</a>
